2007-03-23  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSCell.m (-drawWithFrame:inView:): Extract helper methods
	for border and focus drawing.
	* Source/NSButtonCell.m: Override the border drawing method.
	* Source/NSMenuItemCell.m: Override the border drawing method and
	set default focus ring to none.
	* Source/NSPopupButtonCell.m: Set default focus ring to default.
	
2007-03-23  Sergii Stoian <stoyan255@gmail.com>

	* Source/NSAlert.m: (-_initWithoutGModel): Set selected text
	background color to [NSColor controlLightHighlightColor].

2007-03-23  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSView.m: Replace calls to the now deprecated methods on
	NSAffineTransform with correct ones.

2007-03-22  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSButtonCell.m (-drawWithFrame:inView:),
	* Source/NSCell.m (-drawWithFrame:inView:): Respect focus ring
	style when drawing first responder state.
	* Source/NSBrowserCell.m (-drawInteriorWithFrame:inView:),
	* Source/NSPopupButtonCell.m (-drawInteriorWithFrame:inView:),
	* Source/NSImageCell.m (-drawInteriorWithFrame:inView:): Don't
	draw focus ring.

2007-03-22  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSAffineTransform.m: Avoid accessing internals of the base
	library class directly.  Mark many methods as deprecated.
	* Headers/AppKit/NSAffineTransform.h: Mark gnustep extensions as
	deprecated.  Perhaps we don't want to deprecate all of them though
	need feedback on that.

2007-03-21  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSView.m (-gState): Generate a gstate if one is needed
	and none has been set up to now.

2007-03-19  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSPrintOperation.m (NSView -_endSheet, NSView
	-_displayPageInRect:atPlacement:withInfo:): Get graphics context
	from the print operation. 
	* Source/NSView.m (-_lockFocusInContext:inRect:): When not set,
	get graphics context either from window or from the print operation.
	* Source/NSView.m (-lockFocusInRect, -lockFocusIfCanDraw): Don't